<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.usmanhussain.cayenne</groupId>
    <artifactId>Cayenne</artifactId>
    <version>2.0</version>
    <name>com.usmanhussain.cayenne:Cayenne</name>
    <description>com.usmanhussain.cayenne - Cayenne is a set up project for any programme or project for getting started
        with test automation using Habanero.
        It allows you to have a fully working and ready to use Test Automation framework in a matter of minutes. The
        framework creates a project for the user using the Habanero project.
        The folder definition and set up utilise the framework, 'Habanero' which can be found here:
        https://github.com/usman-h/Habanero
    </description>

    <developers>
        <developer>
            <name>Usman H Hussain</name>
            <email>usman-h@hotmail.co.uk</email>
            <url>https://github.com/usman-h</url>
        </developer>
    </developers>

    <properties>
        <sonar.language>java</sonar.language>
        <custom.folder>config</custom.folder>
        <surefire.fork.count>2</surefire.fork.count>
        <features>src/test/resources/features</features>
        <testFailureIgnore>true</testFailureIgnore>
        <driverType>$driver</driverType>
        <generateHarReport>true</generateHarReport>
        <jenkinsStyleReports>true</jenkinsStyleReports>
        <chromeDriverPath>${basedir}\src\main\resources\drivers\chromedriver.exe</chromeDriverPath>
        <ieDriverPath>${basedir}\src\main\resources\drivers\IEDriverServer.exe</ieDriverPath>
        <geckoDriverPath>${basedir}\src\main\resources\drivers\geckodriver.exe</geckoDriverPath>
        <!--<phantomjsDriverPath>${basedir}\src\main\resources\drivers\phantomjs.exe</phantomjsDriverPath>-->
        <java.version>1.8</java.version>
        <hamcrest.version>1.3</hamcrest.version>
        <maven.compiler.version>3.3</maven.compiler.version>
        <maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
        <logback.version>1.1.7</logback.version>
        <cucumber.jvm.parallel.version>1.2.1</cucumber.jvm.parallel.version>
        <maven.checkstyle.plugin.version>2.17</maven.checkstyle.plugin.version>
        <checkstyle.version>6.19</checkstyle.version>
        <acceptance.tests.in.parallel>1</acceptance.tests.in.parallel>
        <logLevel>WARN</logLevel>
        <include>**/*Test.class</include>
        <runTags>default</runTags>
        <noRunTags>~@manual</noRunTags>
    </properties>

    <profiles>
        <profile>
            <id>jenkins</id>
        </profile>

        <profile>
            <id>ENVIRONMENT ID GOES HERE!!!</id>
            <!-- Use these profiles to run tests against different environments -->
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>

        <profile>
            <id>reporting</id>
            <properties>
                <jenkinsStyleReports>true</jenkinsStyleReports>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/test-classes/com/dlg/saucecucumberjvm</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>src/test/resources</directory>
                                    <filtering>true</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.github.temyers</groupId>
                <artifactId>cucumber-jvm-parallel-plugin</artifactId>
                <version>4.0.0</version>
                <executions>
                    <execution>
                        <id>generateRunners</id>
                        <phase>generate-test-sources</phase>
                        <goals>
                            <goal>generateRunners</goal>
                        </goals>
                        <configuration>
                            <!-- Mandatory -->
                            <!-- comma separated list of package names to scan for glue code -->
                            <glue>
                                <package>${project.groupId}.step_definitions</package>
                                <package>${project.groupId}.hooks</package>
                            </glue>
                            <!-- These are the default values -->
                            <!-- Where to output the generated Junit tests -->
                            <outputDirectory>${project.build.directory}/generated-test-sources/features
                            </outputDirectory>
                            <!-- The diectory containing your feature files.  -->
                            <featuresDirectory>${features}</featuresDirectory>
                            <!-- Directory where the cucumber report files shall be written  -->
                            <cucumberOutputDir>${project.build.directory}/cucumber_reports/regression_results
                            </cucumberOutputDir>
                            <!-- comma separated list of output formats -->
                            <plugins>
                                <plugin>
                                    <name>json</name>
                                </plugin>
                                <plugin>
                                    <name>html</name>
                                </plugin>
                                <plugin>
                                    <name>junit</name>
                                </plugin>
                                <plugin>
                                    <name>rerun</name>
                                </plugin>
                            </plugins>

                            <!-- CucumberOptions.strict property -->
                            <strict>true</strict>
                            <!-- CucumberOptions.monochrome property -->
                            <monochrome>true</monochrome>
                            <!-- The tags to run, maps to CucumberOptions.tags property -->
                            <namingScheme>pattern</namingScheme>
                            <!-- The class naming pattern to use.  Only required/used if naming scheme is 'pattern'.-->
                            <namingPattern>{f}_Parallel{c}Test</namingPattern>
                            <!-- One of [SCENARIO, FEATURE]. SCENARIO generates one runner per scenario.  FEATURE generates a runner per feature. -->
                            <parallelScheme>FEATURE</parallelScheme>
                            <!-- If set to true, only feature files containing the required tags shall be generated. -->
                            <!-- Excluded tags (~@notMe) are ignored. -->
                            <tags>
                                <tag>${runTags}</tag>
                                <tag>${noRunTags}</tag>
                            </tags>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>merge-cucumber-js-reports</id>
                        <phase>test</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <classpathScope>test</classpathScope>
                            <mainClass>${project.groupId}.JSONReportMerger</mainClass>
                            <arguments>
                                <argument>target/cucumber_reports/regression_results</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.4.0</version>
                <executions>
                    <execution>
                        <id>merge-cucumber-js-reports</id>
                        <phase>test</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <includeProjectDependencies>true</includeProjectDependencies>
                            <classpathScope>test</classpathScope>
                            <mainClass>com.usmanhussain.ghost.JSONReportMerger</mainClass>
                            <arguments>
                                <argument>target/cucumber_reports/regression_results</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>collate-exceptions</id>
                        <phase>test</phase>
                        <goals>
                            <goal>java</goal>
                        </goals>
                        <configuration>
                            <includeProjectDependencies>true</includeProjectDependencies>
                            <classpathScope>test</classpathScope>
                            <mainClass>com.usmanhussain.ghost.AutoSmart</mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>cucumber-jvm</projectName>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <cucumberOutput>
                                ${project.build.directory}/cucumber_reports/regression_results/cucumber.json
                            </cucumberOutput>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <forkCount>${surefire.fork.count}</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Duser.language=en</argLine>
                    <argLine>-Xmx1024m</argLine>
                    <argLine>-XX:MaxPermSize=256m</argLine>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                    <useFile>false</useFile>
                    <testFailureIgnore>${testFailureIgnore}</testFailureIgnore>
                    <includes>
                        <include>${include}</include>
                    </includes>
                    <systemPropertyVariables>
                        <driverType>${driverType}</driverType>
                        <generateHarReport>${generateHarReport}</generateHarReport>
                        <webdriver.chrome.driver>${chromeDriverPath}</webdriver.chrome.driver>
                        <webdriver.ie.driver>${ieDriverPath}</webdriver.ie.driver>
                        <webdriver.gecko.driver>${geckoDriverPath}</webdriver.gecko.driver>
                        <!--<webdriver.phantomjs.driver>${phantomjsDriverPath}</webdriver.phantomjs.driver>
                        <phantomjs.binary.path>${phantomjsDriverPath}</phantomjs.binary.path>-->
                        <jenkinsStyleReports>${jenkinsStyleReports}</jenkinsStyleReports>
                        <logLevel>debug</logLevel>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.usmanhussain.habanero</groupId>
            <artifactId>Habanero</artifactId>
            <version>1.3.0</version>
        </dependency>
    </dependencies>
</project>
